# reader_docx

./: .gitignore  .tmp  .~lock.hello_docx.docx#  :w  Cargo.toml  asasdfs  hello_docx.docx  hello_docx_saves.docx  result.out  test2.docx  tmp.out
shaders/: fill_shader.wgsl  text_shader.wgsl
src/: aaaa.txt  app.rs  args.rs  block.rs  buffers.rs  colorscheme.rs  commands_apply_thread.rs  document_draw.rs  draw.rs  draw_paragraph.rs  env.rs  font.rs  init.rs  keyboard_input.rs  log_helper.rs  main.rs  main_loop.rs  math.rs  primitives.rs  read_file.rs  state.rs  text.rs  traits.rs  ui.rs  uniforms.rs  update_events.rs  vertex.rs
src/depreciated/: main.rs  traits.rs
src/depreciated/docx_editor/: text_editor.rs
src/depreciated_2/: draw.rs  main.rs
src/docx/docProps/: app.xml  core.xml
src/docx/word/: document.xml  settings.xml  styles.xml
src/docx_document/: add_font.rs  content_tree.rs  display.rs  from_minidom.rs  from_word_xml.rs  getters.rs  mod.rs
src/docx_editor/: mod.rs
test_docx/: [Content_Types].xml
test_docx/docProps/: app.xml  core.xml  thumbnail.wmf
test_docx/test2/: .~lock.test2.docx#  test2.docx
test_docx/test2/word/: document.xml
test_docx/word/: document.xml  fontTable.xml  settings.xml  styles.xml  webSettings.xml
test_docx/word/_rels/: document.xml.rels
word_xml/: Cargo.toml  tmp.xml
word_xml/examples/check_parse/: document_formated.xml  main.rs
word_xml/examples/check_write/: main.rs
word_xml/src/: builder.rs  from_str.rs  getters.rs  lib.rs  write.rs  xml.pest
