cargo-features = ["edition2024"]

[package]
name = "reader_docx"
version = "0.1.0"
edition = "2024"

[dependencies]
fontconfig = "0.8"
zip = "2.1"
minidom = "0.15.2"
anyhow = "1.0.82"
nestify = "0.3.3"
unicode-segmentation = "1.11.0"
lazy_static = "1.4.0"
argp = "0.3.0"
rfd = "0.14.1"
tokio = { version = "1.37.0", features = ["fs", "rt"] }
sdl2 = { version = "0.36", features = ["ttf"] }
colored = "2.1.0"
serde = "1.0.203"
toml = "0.8.13"
async-std = "1.12.0"
features = "0.10.0"
attributes = "0.0.8"
futures = "0.3.30"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"
