cargo-features = ["edition2024"]

[package]
name = "reader_docx"
version = "0.1.0"
edition = "2024"

[dependencies]
font-loader = "0.11.0"
zip = "2.1"
minidom = "0.15.2"
anyhow = "1.0.82"
unicode-segmentation = "1.11.0"
argp = "0.3.0"
rfd = "0.14.1"
toml = "0.8.13"
attributes = "0.0.8"
winit = "0.30.0"
rusttype = "0.9.3"
bytemuck = { version = "1.16.0", features = ["derive"] }
env_logger = "0.11.3"
glam = "0.28.0"
log = "0.4.21"
pollster = "0.3.0"
wgpu = "0.20.0"
colored = "2.1.0"

